--- a/In-Class Projects/Project 2 - Chapter 2 Working With Lists.ipynb
+++ b/In-Class Projects/Project 2 - Chapter 2 Working With Lists.ipynb
@@ -202,7 +202,7 @@
    "id": "2164701e",
    "metadata": {},
    "source": [
-    "a for loop using in range will cycle throuhg variable i from integer j to k = 1 by increments of l for i in rangle (j, k, l)\n",
+    "a for loop using in range will cycle through variable i from integer j to k-1 by increments of l for i in rangle (j, k, l)\n",
     "\n",
     "    execute script"
    ]
